# ros-service-practice

./: .gitignore  LICENSE  README.md  WORKSHEET.md
agv_nav_service/: CMakeLists.txt  package.xml
agv_nav_service/scripts/: nav_client.py  nav_server.py
agv_nav_service/srv/: CheckNavGoal.srv
docs/: OVERVIEW.md
solution/agv_nav_service/scripts/: nav_client.py  nav_server.py
